--- a/projects/ui-components/src/lib/list/list.html
+++ b/projects/ui-components/src/lib/list/list.html
@@ -1,18 +1,11 @@
-<p-card [style]="{ width: '25rem', overflow: 'hidden' }">
-    <ng-template #header>
-        <img alt="Card" class="w-full" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
-    </ng-template>
-    <ng-template #title> Advanced Card </ng-template>
-    <ng-template #subtitle> Card subtitle </ng-template>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-        deserunt
-        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
-    </p>
-    <ng-template #footer>
-        <div class="flex gap-4 mt-1">
-            <p-button label="Cancel" severity="secondary" class="w-full" [outlined]="true" styleClass="w-full" />
-            <p-button label="Save" class="w-full" styleClass="w-full" />
-        </div>
-    </ng-template>
-</p-card>
+<div class="main-layout">
+    <div class="d-flex justify-content-between">
+        <h5>TO DO</h5>
+        <p-tag value="50" severity="secondary" [rounded]="true" />
+    </div>
+    <p-divider />
+    <div class="d-flex flex-column gap-2">
+        @for (task of tasks; track $index) {
+        <lib-card [cardDetails]="task" class="w-100"></lib-card>
+        }
+    </div>
